--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ bcrypt==3.1.7
 billiard==3.6.4.0
 black==22.3.0
 blinker==1.4
-Brlapi==0.7.0
+#Brlapi==0.7.0
 celery==5.2.6
 certifi==2019.11.28
 chardet==3.0.4
