--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.1
-command-not-found==0.3
+#command-not-found==0.3
 config==0.5.1
 cryptography==2.8
 cupshelpers==1.0
